# vaani

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
api/: index.py
app/: __init__.py  bootstrap.py  config.py  context.py  deps.py  main.py
app/middleware/: auth.py
app/models/: __init__.py  balance.py  budget.py  common.py  expense.py  goals.py  imports.py  settings.py
app/routers/: __init__.py  balances.py  budgets.py  charts.py  demo_data.py  expenses.py  export.py  goals.py  health.py  home.py  imports.py  insights.py  investments.py  landing.py  pages.py  reports.py  settings.py  sheets.py  tables.py  voice.py  wishlist.py
app/services/: __init__.py  auth.py  balances.py  budget_runner.py  goals.py  ledger.py  llm.py  overflow.py  tz.py  uniques.py
app/storage/: __init__.py  csv_store.py  schemas.py  supabase_store.py  user_columns.py  wal.py
docs/: DECISIONS.md  DESIGN_SYSTEM.md  PLAN-ai-briefing-and-rag.md  PLAN-fineye-cloud-byok.md  PLAN-fineye-finance-ai.md  SHEETS_SETUP.md
fixtures/: README.md  sample_expenses.csv
scripts/: bootstrap_cli.py  migrate_to_supabase.py  seed.py
sql/: 001_schema.sql  002_insights_cache.sql  003_budget_state.sql  003_users.sql  004_budget_rules_type.sql
static/css/: base.css  charts.css  components.css  handsontable-skin.css  tokens.css
static/js/: app.js  budgets.js  budgets_monthly.js  charts.js  goals.js  sheets.js  (+7 more)
templates/: balances.html  base.html  budgets.html  budgets_monthly.html  charts.html  expenses.html  goals_overview.html  goals_sources.html  imports.html  index.html  insights_monthly.html  investments.html  landing.html  settings.html  wishlist.html
tests/: conftest.py
(+94 files in other folders)
